services/longhorn/longhorn-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
spec:
  tls:
    - hosts:
        - longhorn.home.com
      secretName: longhorn-tls
  rules:
    - host: longhorn.home.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
